@@ -1,0 +1,384 @@
+"""A wizard, activated when a uniref task is closed. The user can copy
+related documents to his own client with this wizard.
+"""
+
+from Products.CMFCore.utils import getToolByName
+from Products.CMFPlone.interfaces.siteroot import IPloneSiteRoot
+from Products.statusmessages.interfaces import IStatusMessage
+from five import grok
+from opengever.base.browser.wizard import BaseWizardStepForm
+from opengever.base.browser.wizard.interfaces import IWizardDataStorage
+from opengever.base.interfaces import IReferenceNumber
+from opengever.base.source import RepositoryPathSourceBinder
+from opengever.globalindex.interfaces import ITaskQuery
+from opengever.ogds.base.interfaces import IContactInformation
+from opengever.ogds.base.utils import get_client_id
+from opengever.task import _
+from opengever.task.interfaces import ISuccessorTaskController
+from opengever.task.interfaces import ITaskDocumentsTransporter
+from opengever.task.task import ITask
+from opengever.task.util import add_simple_response
+from opengever.task.util import get_documents_of_task
+from plone.directives.form import Schema
+from plone.z3cform.layout import FormWrapper
+from z3c.form.browser.checkbox import CheckBoxFieldWidget
+from z3c.form.button import buttonAndHandler
+from z3c.form.field import Fields
+from z3c.form.form import Form
+from z3c.form.validator import SimpleFieldValidator
+from z3c.form.validator import WidgetValidatorDiscriminators
+from z3c.relationfield.schema import RelationChoice
+from zExceptions import NotFound
+from zope import schema
+from zope.app.intid.interfaces import IIntIds
+from zope.component import getUtility
+from zope.interface import Interface
+from zope.interface import Invalid
+from zope.schema.interfaces import IContextSourceBinder
+from zope.schema.vocabulary import SimpleVocabulary
+import urllib
+
+
+
+class CloseTaskWizard(grok.View):
+    """This view decides whether the wizard is activated
+    and redirects to the appropriate form.
+    """
+
+    grok.context(ITask)
+    grok.name('close-task-wizard')
+    grok.require('cmf.AddPortalContent')
+
+
+    def render(self):
+        if self.is_wizard_active():
+            url = '@@close-task-wizard_select-documents'
+        else:
+            url = 'addresponse?form.widgets.transition=' + \
+                'task-transition-open-tested-and-closed'
+
+        return self.request.RESPONSE.redirect(
+            '/'.join((self.context.absolute_url(), url)))
+
+    def is_wizard_active(self):
+        info = getUtility(IContactInformation)
+        if len(info.get_clients()) < 2:
+            return False
+
+        task_type_category = self.context.task_type_category
+        if task_type_category != 'unidirectional_by_reference':
+            return False
+
+        if self.context.responsible_client == get_client_id():
+            return False
+
+        if len(get_documents_of_task(self.context)) == 0:
+            return False
+
+        return True
+
+
+class CloseTaskWizardStepFormMixin(BaseWizardStepForm):
+
+    steps = (
+        ('close-task-wizard_select-documents',
+         _(u'step_1', default=u'Step 1')),
+
+        ('close-task-wizard_choose-dossier',
+         _(u'step_2', default=u'Step 2')))
+
+    label = _(u'title_close_task', u'Close task')
+
+    passed_data = ['oguid']
+
+
+@grok.provider(IContextSourceBinder)
+def related_documents_vocabulary(task):
+    intids = getUtility(IIntIds)
+
+    terms = []
+    for doc in get_documents_of_task(task):
+        key = str(intids.getId(doc))
+        label = '%s (%s)' % (
+            doc.Title(),
+            IReferenceNumber(doc).get_number())
+
+        terms.append(SimpleVocabulary.createTerm(key, key, label))
+
+    return SimpleVocabulary(terms)
+
+
+class ISelectDocumentsSchema(Schema):
+
+    text = schema.Text(
+        title=_(u'label_response', default=u'Response'),
+        description=_(u'help_accept_task_response',
+                      default=u'Enter a answer text which will be shown '
+                      u'as response when the task is accepted.'),
+        required=False)
+
+    documents = schema.List(
+        title=_(u'label_close_documents',
+                default=u'Documents to copy'),
+        description=_(u'help_close_documents',
+                      default=u'You can copy attached documents to your '
+                      u'client by selecting here the documents to copy.'),
+        required=False,
+
+        value_type=schema.Choice(
+            source=related_documents_vocabulary,
+            ))
+
+
+class SelectDocumentsStepForm(CloseTaskWizardStepFormMixin, Form):
+    fields = Fields(ISelectDocumentsSchema)
+    fields['documents'].widgetFactory = CheckBoxFieldWidget
+
+    step_name = 'close-task-wizard_select-documents'
+
+    @buttonAndHandler(_(u'button_continue', default=u'Continue'),
+                      name='save')
+    def handle_continue(self, action):
+        data, errors = self.extractData()
+
+        if not errors:
+            oguid = ISuccessorTaskController(self.context).get_oguid()
+
+            dm = getUtility(IWizardDataStorage)
+            dmkey = 'close:%s' % oguid
+            dm.update(dmkey, data)
+
+            if len(data['documents']) == 0:
+                url = '/'.join((
+                        self.context.absolute_url(),
+                        '@@close-task-wizard_close?oguid=%s' % oguid))
+                return self.request.RESPONSE.redirect(url)
+
+            else:
+                info = getUtility(IContactInformation)
+                client = info.get_client_by_id(
+                    self.context.responsible_client)
+                dm.push_to_remote_client(dmkey, client.client_id)
+
+                url = '/'.join((
+                        client.public_url,
+                        '@@close-task-wizard_choose-dossier?oguid=%s' % (
+                            oguid)))
+                return self.request.RESPONSE.redirect(url)
+
+    @buttonAndHandler(_(u'button_cancel', default=u'Cancel'),
+                      name='cancel')
+    def handle_cancel(self, action):
+        return self.request.RESPONSE.redirect(self.context.absolute_url())
+
+
+class SelectDocumentsStepView(FormWrapper, grok.View):
+    grok.context(ITask)
+    grok.name('close-task-wizard_select-documents')
+    grok.require('cmf.AddPortalContent')
+
+    form = SelectDocumentsStepForm
+
+    def __init__(self, *args, **kwargs):
+        FormWrapper.__init__(self, *args, **kwargs)
+        grok.View.__init__(self, *args, **kwargs)
+
+
+class IChooseDossierSchema(Schema):
+
+    dossier = RelationChoice(
+        title=_(u'label_close_choose_dossier',
+                default=u'Target dossier'),
+        description=_(u'help_close_choose_dossier',
+                      default=u'Choose the target dossier where the '
+                      'documents should be filed.'),
+        required=True,
+
+        source=RepositoryPathSourceBinder(
+            object_provides='opengever.dossier.behaviors.dossier.' + \
+                'IDossierMarker',
+            review_state='dossier-state-active',
+            navigation_tree_query={
+                'object_provides': [
+                    'opengever.repository.repositoryroot.IRepositoryRoot',
+                    'opengever.repository.repositoryfolder.' + \
+                        'IRepositoryFolderSchema',
+                    'opengever.dossier.behaviors.dossier.IDossierMarker',
+                    ],
+                'review_state': ['repositoryroot-state-active',
+                                 'repositoryfolder-state-active',
+                                 'dossier-state-active'],
+                }))
+
+class DossierValidator(SimpleFieldValidator):
+
+    def validate(self, value):
+        super(DossierValidator, self).validate(value)
+
+        document_addable = False
+        for fti in value.allowedContentTypes():
+            if fti.id == 'opengever.document.document':
+                document_addable = True
+                break
+
+        if not document_addable:
+            msg = _(u'You cannot add documents to the selected dossier. '
+                    u'Either the dossier is closed or you do not have the '
+                    u'privileges.')
+            raise Invalid(msg)
+
+WidgetValidatorDiscriminators(DossierValidator,
+                              field=IChooseDossierSchema['dossier'])
+grok.global_adapter(DossierValidator)
+
+
+class ChooseDossierStepForm(CloseTaskWizardStepFormMixin, Form):
+    fields = Fields(IChooseDossierSchema)
+    step_name = 'close-task-wizard_choose-dossier'
+
+    @buttonAndHandler(_(u'button_save', default=u'Save'),
+                      name='save')
+    def handle_save(self, action):
+        data, errors = self.extractData()
+
+        if not errors:
+            query = getUtility(ITaskQuery)
+            info = getUtility(IContactInformation)
+            dm = getUtility(IWizardDataStorage)
+
+            oguid = self.request.get('oguid')
+            dmkey = 'close:%s' % oguid
+
+            task = query.get_task_by_oguid(oguid)
+            client = info.get_client_by_id(task.client_id)
+
+            self.copy_documents(task, data['dossier'],
+                                dm.get(dmkey, 'documents'))
+
+            redirect_data = {
+                'oguid': oguid,
+                'redirect_url': '%s#documents' % (
+                    data['dossier'].absolute_url())}
+
+            url = '/'.join((
+                    client.public_url,
+                    '@@close-task-wizard_close?%s' % urllib.urlencode(
+                        redirect_data)))
+            return self.request.RESPONSE.redirect(url)
+
+    @buttonAndHandler(_(u'button_cancel', default=u'Cancel'),
+                      name='cancel')
+    def handle_cancel(self, action):
+        portal_url = getToolByName(self.context, 'portal_url')
+        url = '%s/resolve_oguid?oguid=%s' % (
+            portal_url(), self.request.get('oguid'))
+        return self.request.RESPONSE.redirect(url)
+
+    def copy_documents(self, task, dossier, documents):
+        doc_transporter = getUtility(ITaskDocumentsTransporter)
+
+        intids_mapping = doc_transporter.copy_documents_from_remote_task(
+            task, dossier, documents=documents)
+
+        IStatusMessage(self.request).addStatusMessage(
+            _(u'${num} documents were copied.',
+              mapping={'num': len(intids_mapping)}), 'info')
+
+
+class ChooseDossierStepView(FormWrapper, grok.View):
+    grok.context(Interface)
+    grok.name('close-task-wizard_choose-dossier')
+    grok.require('zope2.View')
+
+    form = ChooseDossierStepForm
+
+    def __init__(self, *args, **kwargs):
+        FormWrapper.__init__(self, *args, **kwargs)
+        grok.View.__init__(self, *args, **kwargs)
+
+
+class ChooseDosserStepRedirecter(grok.View):
+    """Remote clients redirect usually to the site root, but this step needs
+    to be called on the repository root.
+
+    The remote client does not know the URL to the repository root, so it
+    redirects to the site root. This view just redirects to the repository
+    root, passing the parameters on.
+    """
+
+    grok.context(IPloneSiteRoot)
+    grok.name('close-task-wizard_choose-dossier')
+    grok.require('zope2.View')
+
+    def render(self):
+        root = self.context.restrictedTraverse(
+            '@@primary_repository_root').get_primary_repository_root()
+
+        url = '%s/@@close-task-wizard_choose-dossier?%s' % (
+            root.absolute_url(),
+            self.request.get('QUERY_STRING'))
+
+        return self.request.RESPONSE.redirect(url)
+
+
+class CloseTaskView(grok.View):
+    """This view closes the task. It is either called directly, if no
+    documents are selected to be copied or after choosing the target dossier
+    and copying the documents.
+    It is not context sensitive.
+    """
+
+    grok.context(Interface)
+    grok.name('close-task-wizard_close')
+    grok.require('zope2.View')
+
+    def render(self):
+        task = self.get_task()
+        text = self.get_text()
+
+        self.close_task(task, text)
+
+        redirect_url = self.request.get('redirect_url', None)
+        if redirect_url is None:
+            redirect_url = task.absolute_url()
+
+        return self.request.RESPONSE.redirect(redirect_url)
+
+    def close_task(self, task, text):
+        transition = 'task-transition-open-tested-and-closed'
+        wftool = getToolByName(task, 'portal_workflow')
+
+        before = wftool.getInfoFor(task, 'review_state')
+        before = wftool.getTitleForStateOnType(before, task.Type())
+
+        wftool.doActionFor(task, transition)
+
+        after = wftool.getInfoFor(task, 'review_state')
+        after = wftool.getTitleForStateOnType(after, task.Type())
+
+        response = add_simple_response(task, text=text)
+        response.add_change('review_state', _(u'Issue state'),
+                            before, after)
+        return response
+
+    def get_task(self):
+        intids = getUtility(IIntIds)
+        membership = getToolByName(self.context, 'portal_membership')
+        oguid = self.request.get('oguid')
+
+        clientid, iid = oguid.split(':')
+        if clientid != get_client_id():
+            raise NotFound
+
+        task = intids.getObject(int(iid))
+        if not membership.checkPermission('Add portal content', task):
+            raise NotFound
+
+        return task
+
+    def get_text(self):
+        dm = getUtility(IWizardDataStorage)
+
+        oguid = self.request.get('oguid')
+        dmkey = 'close:%s' % oguid
+        return dm.get(dmkey, 'text')
